<resources>
    <string name="app_name">Parking Spot Finder</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">The password is too short</string>
    <string name="error_incorrect_password">The password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Welcome">Welcome Back!</string>
    <string name="WelcomeDes">The Best Parking Spot Finding App in Lebanon</string>
    <string name="Login">Log In</string>
    <string name="register">Create Account</string>
    <string name="title_activity_maps">Map</string>
    <string name="searchlisting">Search\nListing</string>
    <string name="createlisting">Create\nListing</string>
    <string name="deletelisting">Delete\nListing</string>
    <string name="profile">My Account</string>
    <string name="signout">Sign Out</string>
    <string name="username">userName</string>
    <string name="price_label">Price</string>
    <string name="address_label">Address</string>
    <string name="Create_Listing_Submit">Create Parking Spot</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_other_user">OtherUserActivity</string>
    <string name="my_bookings">My\nBookings</string>
</resources>