<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.homsi.psf.UserActivity">


    <TextView
        android:id="@+id/emailText"
        android:layout_width="220dp"
        android:layout_height="32dp"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.047"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimary"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-290dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/searchButton"
            android:layout_width="200dp"
            android:layout_height="135dp"
            android:layout_margin="5dp"
            android:background="@color/colorAccent"
            android:text="@string/searchlisting"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <Button
            android:id="@+id/createButton"
            android:layout_width="200dp"
            android:layout_height="135dp"
            android:layout_margin="5dp"
            android:background="@color/colorAccent"
            android:text="@string/createlisting"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="200dp"
            android:layout_height="135dp"
            android:layout_margin="5dp"
            android:background="@color/colorAccent"
            android:text="@string/deletelisting"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <Button
            android:id="@+id/profile"
            android:text="@string/profile"
            android:layout_width="200dp"
            android:layout_height="135dp"
            android:layout_margin="5dp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/signoutButton"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/signout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/colorAccent"
        android:textColor="@color/colorWhite"
   />

</androidx.constraintlayout.widget.ConstraintLayout>